en/6.0/install/install.rst
============
Installation
============

This page is generated by Machine Translation from Japanese.

Installation requirements
=========================

|Fess| can be available in these environments.

-  OS: Windows, Unix, and Java can run OS environment

-  Java: Java 6 or more

If Java is not installed in the environment we want to |Fess| takes over
Java 6 JDK from http://java.sun.com/, please install.

Download
========

`http://sourceforge.jp/projects/ |Fess| /releases/ <http://sourceforge.jp/projects/fess/releases/>`__
From the download the latest |Fess| package.

Installation
============

Expand the downloaded fess-server-x.y.zip. If you installed in the UNIX
environment, in the bin added the performing rights to a script.

::

    $ unzip fess-server-x.y.zip
    $ cd fess-server-x.y
    $ chmod +x bin/*.sh   # (Unix環境のみ)

Changing the administrator password
===================================

Administrator account is managed by the application server. |Fess| Server
standard available Tomcat, as well as to the user changing the Tomcat.
Modify the password for the admin account of the conf/tomcat-user.xml if
you want to change.

::

    <user username="admin" password="admin" roles="fess"/>

SOLR server password change
===========================

To access the Solr into |Fess| server is password becomes necessary.
Change the default passwords in production, etc.

How to change the password, you must first change the password attribute
of the conf/tomcat-user.xml solradmin.

::

      <user username="solradmin" password="solradmin" roles="solr"/>

Describes the provided password
webapps/fess/WEB-INF/classes/fess\_solr.dicon the following points
tomcat-user.xml to the next.

::

    <component class="org.apache.commons.httpclient.UsernamePasswordCredentials">
        <arg>"solradmin"</arg> <!-- Username -->
        <arg>"solradmin"</arg> <!-- Password -->
    </component>
